# evalflow

./: .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/blog/: sqlite-wal-race-under-ray.md
docs/design/: eval-spec.md  viewer.md
evalflow/: __init__.py  cache.py  cli.py  errors.py  manifest.py  results.py  spec.py
evalflow/runner/: base.py  local.py  ray_runner.py
examples/: gsm8k_subset.yaml
examples/data/: gsm8k_subset.jsonl
gradetrail/: __init__.py  cache.py  cli.py  errors.py  manifest.py  results.py  spec.py
gradetrail/providers/: anthropic.py  base.py  openai.py  openai_compatible.py
gradetrail/runner/: base.py  local.py  ray_runner.py
gradetrail/scorers/: deterministic.py  judge.py
gradetrail/viewer/: server.py
gradetrail/viewer/static/: index.html
reproeval/: __init__.py
scripts/: build_gsm8k_500.py  repro_sqlite_wal_race.py
tests/: test_cache.py  test_cli.py  test_manifest.py  test_results.py  test_spec.py
tests/providers/: test_anthropic.py  test_base.py  test_openai.py  test_openai_compatible.py
tests/runner/: test_base.py  test_local.py  test_ray_runner.py  test_ray_runner_sharding.py
tests/scorers/: test_deterministic.py  test_judge.py
tests/viewer/: test_server.py
