[project]
name = "evalflow"
version = "0.1.0.dev0"
description = "A distributed LLM evaluation harness: declarative, cached, reproducible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "aiosqlite>=0.19",
    "structlog>=24.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
evalflow = "evalflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["evalflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
